SERVER-175: refine response object
